// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCredentialList can render 1`] = `
<div
  className="profile-credential-list"
>
  <div
    className="profile-credential-list__header"
  >
    <h4
      className="profile__title"
    >
      Credentials
      <span
        className="profile__title-count"
      >
        (
        0
        )
      </span>
    </h4>
    <div
      className="profile-credential-list__add"
    >
      <Button
        action={[Function]}
        type="p-button--neutral"
      >
        Add credentials
      </Button>
    </div>
  </div>
  <ExpandingRow
    clickable={false}
    expanded={false}
  >
    <div />
    <div
      className="col-12"
    />
  </ExpandingRow>
  <Spinner />
</div>
`;

exports[`ProfileCredentialList can show the UI to delete a credential 1`] = `
<div
  className="profile-credential-list"
>
  <div
    className="profile-credential-list__header"
  >
    <h4
      className="profile__title"
    >
      Credentials
      <span
        className="profile__title-count"
      >
        (
        4
        )
      </span>
    </h4>
    <div
      className="profile-credential-list__add"
    >
      <Button
        action={[Function]}
        type="p-button--neutral"
      >
        Add credentials
      </Button>
    </div>
  </div>
  <ExpandingRow
    clickable={false}
    expanded={false}
  >
    <div />
    <div
      className="col-12"
    />
  </ExpandingRow>
  <div
    className="profile-credential-list__list"
  >
    <BasicTable
      headerClasses={Array []}
      headers={
        Array [
          Object {
            "content": "Name",
          },
          Object {
            "content": "Provider",
          },
          Object {
            "content": "Used by",
          },
          Object {
            "classes": Array [
              "u-align-text--right",
            ],
            "content": "Action",
          },
        ]
      }
      rowClasses={Array []}
      rows={
        Array [
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "cred1",
              },
              Object {
                "content": "aws",
              },
              Object {
                "content": "testmodel1",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "aws_foo@external_cred1",
            "rowClickable": false,
          },
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "testcred",
              },
              Object {
                "content": "aws",
              },
              Object {
                "content": "-",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "aws_foo@external_testcred",
            "rowClickable": false,
          },
          Object {
            "classes": Array [
              "profile-credential-list--highlighted",
            ],
            "columns": Array [
              Object {
                "content": "cred1",
              },
              Object {
                "content": "azure",
              },
              Object {
                "content": "testmodel2",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "azure_foo@external_cred1",
            "rowClickable": false,
          },
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "admin",
              },
              Object {
                "content": "google",
              },
              Object {
                "content": "-",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "google_foo@external_admin",
            "rowClickable": false,
          },
        ]
      }
    />
  </div>
  <div
    className="profile-credential-list__delete"
  >
    <ProfileCredentialListDelete
      addNotification={[Function]}
      credential="google_foo@external_admin"
      onCancel={[Function]}
      onCredentialDeleted={[Function]}
      revokeCloudCredential={[Function]}
    />
  </div>
</div>
`;

exports[`ProfileCredentialList can show the add form 1`] = `
<div
  className="profile-credential-list"
>
  <div
    className="profile-credential-list__header"
  >
    <h4
      className="profile__title"
    >
      Credentials
      <span
        className="profile__title-count"
      >
        (
        4
        )
      </span>
    </h4>
    <div
      className="profile-credential-list__add"
    >
      <Button
        action={[Function]}
        type="p-button--neutral"
      >
        Add credentials
      </Button>
    </div>
  </div>
  <ExpandingRow
    clickable={false}
    expanded={true}
  >
    <div />
    <div
      className="col-12"
    >
      <CredentialAddEdit
        acl={
          Object {
            "isReadOnly": [Function],
          }
        }
        addNotification={[Function]}
        controllerAPI={
          Object {
            "listClouds": [Function],
            "reshape": [Function],
            "updateCloudCredential": [Function],
          }
        }
        controllerIsReady={[Function]}
        credentials={
          Array [
            "aws_foo@external_cred1",
            "aws_foo@external_testcred",
            "azure_foo@external_cred1",
            "google_foo@external_admin",
          ]
        }
        key="deployment-credential-add"
        onCancel={[Function]}
        onCredentialUpdated={[Function]}
        sendAnalytics={[Function]}
        username="foo@external"
      />
    </div>
  </ExpandingRow>
  <div
    className="profile-credential-list__list"
  >
    <BasicTable
      headerClasses={Array []}
      headers={
        Array [
          Object {
            "content": "Name",
          },
          Object {
            "content": "Provider",
          },
          Object {
            "content": "Used by",
          },
          Object {
            "classes": Array [
              "u-align-text--right",
            ],
            "content": "Action",
          },
        ]
      }
      rowClasses={Array []}
      rows={
        Array [
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "cred1",
              },
              Object {
                "content": "aws",
              },
              Object {
                "content": "testmodel1",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "aws_foo@external_cred1",
            "rowClickable": false,
          },
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "testcred",
              },
              Object {
                "content": "aws",
              },
              Object {
                "content": "-",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "aws_foo@external_testcred",
            "rowClickable": false,
          },
          Object {
            "classes": Array [
              "profile-credential-list--highlighted",
            ],
            "columns": Array [
              Object {
                "content": "cred1",
              },
              Object {
                "content": "azure",
              },
              Object {
                "content": "testmodel2",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "azure_foo@external_cred1",
            "rowClickable": false,
          },
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "admin",
              },
              Object {
                "content": "google",
              },
              Object {
                "content": "-",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "google_foo@external_admin",
            "rowClickable": false,
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`ProfileCredentialList can show the edit form 1`] = `
<div
  className="profile-credential-list"
>
  <div
    className="profile-credential-list__header"
  >
    <h4
      className="profile__title"
    >
      Credentials
      <span
        className="profile__title-count"
      >
        (
        4
        )
      </span>
    </h4>
    <div
      className="profile-credential-list__add"
    >
      <Button
        action={[Function]}
        type="p-button--neutral"
      >
        Add credentials
      </Button>
    </div>
  </div>
  <ExpandingRow
    clickable={false}
    expanded={false}
  >
    <div />
    <div
      className="col-12"
    />
  </ExpandingRow>
  <div
    className="profile-credential-list__list"
  >
    <BasicTable
      headerClasses={Array []}
      headers={
        Array [
          Object {
            "content": "Name",
          },
          Object {
            "content": "Provider",
          },
          Object {
            "content": "Used by",
          },
          Object {
            "classes": Array [
              "u-align-text--right",
            ],
            "content": "Action",
          },
        ]
      }
      rowClasses={Array []}
      rows={
        Array [
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "cred1",
              },
              Object {
                "content": "aws",
              },
              Object {
                "content": "testmodel1",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": <CredentialAddEdit
              acl={
                Object {
                  "isReadOnly": [Function],
                }
              }
              addNotification={[Function]}
              controllerAPI={
                Object {
                  "listClouds": [Function],
                  "reshape": [Function],
                  "updateCloudCredential": [Function],
                }
              }
              controllerIsReady={[Function]}
              credential={
                Object {
                  "cloud": "aws",
                  "displayName": "cred1",
                  "models": Array [
                    "testmodel1",
                  ],
                }
              }
              credentials={
                Array [
                  "aws_foo@external_cred1",
                  "aws_foo@external_testcred",
                  "azure_foo@external_cred1",
                  "google_foo@external_admin",
                ]
              }
              onCancel={[Function]}
              onCredentialUpdated={[Function]}
              sendAnalytics={[Function]}
              username="foo@external"
            />,
            "expandedContentExpanded": true,
            "key": "aws_foo@external_cred1",
            "rowClickable": false,
          },
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "testcred",
              },
              Object {
                "content": "aws",
              },
              Object {
                "content": "-",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "aws_foo@external_testcred",
            "rowClickable": false,
          },
          Object {
            "classes": Array [
              "profile-credential-list--highlighted",
            ],
            "columns": Array [
              Object {
                "content": "cred1",
              },
              Object {
                "content": "azure",
              },
              Object {
                "content": "testmodel2",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "azure_foo@external_cred1",
            "rowClickable": false,
          },
          Object {
            "classes": null,
            "columns": Array [
              Object {
                "content": "admin",
              },
              Object {
                "content": "google",
              },
              Object {
                "content": "-",
              },
              Object {
                "classes": Array [
                  "u-align-text--right",
                ],
                "content": <ButtonDropdown
                  disableDropdown={false}
                  icon="contextual-menu-horizontal"
                  listItems={
                    Array [
                      Object {
                        "action": [Function],
                        "label": "Edit",
                      },
                      Object {
                        "action": [Function],
                        "label": "Delete",
                      },
                    ]
                  }
                />,
              },
            ],
            "expandedContent": null,
            "expandedContentExpanded": false,
            "key": "google_foo@external_admin",
            "rowClickable": false,
          },
        ]
      }
    />
  </div>
</div>
`;
